--- a/component/about.html
+++ b/component/about.html
@@ -7,12 +7,11 @@
         <div class="center">バージョン</div>
         <div class="right"><!--t:Version-->,<!--t:Timestamp-->,<!--t:FlavorName--></div>
       </v-ons-list-item>
-      <v-ons-list-item modifier="chevron tappable" @click="goToTwitter('monya_wallet')">
+      <v-ons-list-item modifier="chevron tappable" @click="goToTwitter('2ndLesmi')">
         <div class="center">作った人</div>
-        <div class="right">もにゃ 開発チーム</div>
+        <div class="right">nao20010128nao</div>
       </v-ons-list-item>
-      <v-ons-list-item modifier="chevron tappable" @click="openLink('https://missmonacoin.github.io')">作者に寄付する</v-ons-list-item>
-      
+
       <v-ons-list-header>バックエンドをお借りした方々(敬称略)</v-ons-list-header>
       <v-ons-list-item modifier="chevron tappable" @click="goToTwitter('Fujiwaraizuho')">
         <div class="center">Monacoin</div>
@@ -39,8 +38,8 @@
       
       </v-ons-list-item>
       <v-ons-list-header>オープンソース</v-ons-list-header>
-      <v-ons-list-item modifier="chevron tappable" @click="openLink('https://github.com/monya-wallet/monya')">ソースコード</v-ons-list-item>
-      <v-ons-list-item @click="openLink('https://github.com/monya-wallet/monya/blob/master/LICENSE')">
+      <v-ons-list-item modifier="chevron tappable" @click="openLink('https://github.com/nao20010128nao/nyaan-wallet')">ソースコード</v-ons-list-item>
+      <v-ons-list-item @click="openLink('https://github.com/nao20010128nao/nyaan-wallet/blob/master/LICENSE')">
         <div class="center">ライセンス</div>
         <div class="right">GNU GPL v3</div>
         
